# rs-trafilatura

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: etree.rs  extract.rs  html_processing.rs  lib.rs  markdown.rs  options.rs  result.rs
src/extractor/: fallback.rs  mod.rs  state.rs  tags.rs
src/metadata/: meta_tags.rs  mod.rs
src/page_type/: ml.rs  mod.rs
tests/: boilerplate_test.rs  image_license_test.rs  image_link_toggle_test.rs  official_api_test.rs  robustness_test.rs  spike_markdown_validation.rs  table_test.rs
