[package]
name = "rs-trafilatura"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
authors = ["Murrough Foley"]
description = "Rust port of trafilatura - web content extraction library"
license = "MIT OR Apache-2.0"
homepage = "https://murroughfoley.com"
repository = "https://github.com/Murrough-Foley/rs-trafilatura"
documentation = "https://docs.rs/rs-trafilatura"
readme = "README.md"
keywords = ["html", "content-extraction", "web-scraping", "trafilatura", "boilerplate-removal"]
categories = ["parser-implementations", "web-programming", "text-processing"]

[dependencies]
html-cleaning = "0.3"
quick_html2md = "0.2"
web-page-classifier = "0.1"
dom_query = "0.24"         # Primary DOM manipulation
tendril = "0.4"            # Zero-copy text operations via StrTendril
thiserror = "2.0"
regex = "1.11"
chrono = "0.4"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
spider = { version = ">=2.37, <3", optional = true, default-features = false }

[features]
default = []
spider = ["dep:spider"]

[dev-dependencies]
criterion = "0.5"
tendril = "0.4"

[[bin]]
name = "extract_stdin"
path = "src/bin/extract_stdin.rs"

[[bin]]
name = "batch_markdown"
path = "src/bin/batch_markdown.rs"

[[bench]]
name = "benchmark"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
# Allow these pedantic lints - they're too strict or low-value for this codebase
needless_raw_string_hashes = "allow"    # Stylistic preference
similar_names = "allow"                  # matched/matches, text_len/text_length are clear
cast_precision_loss = "allow"            # Intentional in scoring calculations
items_after_statements = "allow"         # Valid Rust style for inline helpers
doc_markdown = "allow"                   # Too strict about backticks
float_cmp = "allow"                      # Approximate comparisons are intentional
too_many_lines = "allow"                 # Some complex functions need to be long
missing_errors_doc = "allow"             # Error types are self-explanatory
missing_panics_doc = "allow"             # We don't panic in production code
